ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringUnterminated1/input.ts.stderr
error: Unexpected eof
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringUnterminated1/input.ts:2:2
  |
2 | `
  |  ^

